--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 DATABASE_URL="mongodb+srv://rati:rati@cluster0.qiwkdqf.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=4046ca86c3885955832d
+GITHUB_SECRET=e9105336dd1f284879303f373bbbb6f2a6c54f81
+
+GOOGLE_CLIENT_ID=758764828392-phvjcskprmucvtjdveoq4ihu1hqtkk8s.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
