--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.5.2",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
+    "leaflet": "^1.9.4",
     "next": "14.0.0",
     "next-auth": "^4.24.4",
     "query-string": "^8.1.0",
@@ -21,12 +22,14 @@
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-leaflet": "^4.2.1",
     "react-select": "^5.7.7",
     "world-countries": "^5.0.0",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
+    "@types/leaflet": "^1.9.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
