User can upload image with cloudinary

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ GITHUB_SECRET=e9105336dd1f284879303f373bbbb6f2a6c54f81
 
 GOOGLE_CLIENT_ID=758764828392-phvjcskprmucvtjdveoq4ihu1hqtkk8s.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="ddrgrvuqi"
